--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <section class="header">
         <img src="images/logo.png" alt="Haposoft" class="logo">
         <ul class="navbar">
             <li><a href="">HOME</a></li>
@@ -22,16 +22,16 @@
             <li><a href="">LOGIN/REGISTER</a></li>
             <li><a href="">PROFILE</a></li>
         </ul>
-    </div>
+    </section>
 
-    <div class="banner">
+    <section class="banner">
         <div class="banner1">
             <p class="learn">Learn Anytime, Anywhere</p>
             <p class="learn1">at HapoLearn <span><img src="images/Ellipse.png" alt=""></span>!</p>
             <p class="learn2">Interaction lessons, "on-the-go" <br>practice,peer support.</p>
-            <p class="start-learning">Start Learning Now!</p>
+            <p class="start-learning"> <a href="#">Start Learning Now!</a> </p>
         </div>
-        <div class="banner2">
+        <!-- <div class="banner2">
             <p class="banner21">HapoLearn</p>
             <p class="banner22">
                 <span><img src="images/Ellipse.png" alt=""></span>
@@ -39,9 +39,16 @@
             </p>
             <p class="banner23"><img src="images/Vector.png" alt=""><span> Đăng nhập vào Messenger</span></p>
             <p class="banner24">Chat với HapoLearn trong Messenger</p>
-        </div>
+        </div> -->
 
-    </div>
+    </section>
+
+    <section class="body1">
+
+        <div>
+            <img src="images/background1.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
