--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="images/logo.png" alt="Haposoft" class="logo">
         <ul class="navbar">
             <li><a href="">HOME</a></li>
-            <li id="courses"><a href="">ALL COURSES</a></li>
+            <li class="courses"><a href="">ALL COURSES</a></li>
             <li><a href="">LIST LESSON</a></li>
             <li><a href="">LESSON DETAIL</a></li>
             <li><a href="">LOGIN/REGISTER</a></li>
@@ -44,9 +44,41 @@
     </section>
 
     <section class="body1">
+        <img src="images/background1.png" alt="">
+        <div class="center">
+            <div>
 
-        <div>
-            <img src="images/background1.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="footer flex-column">
+        <div class="footer-flex">
+            <div class="content1">
+                <img src="images/Hapo_Learn_white 1.png" alt="">
+                <p>Interactive lessons,"on-the-go"<br>practice,peer support.</p>
+            </div>
+            <div class="content2">
+                <div class="content21">
+                    <p>Home</p>
+                    <p>Features</p>
+                    <p>Courses</p>
+                    <p>Blog</p>
+                </div>
+                <div>
+                    <p>Contact</p>
+                    <p>Terms of Use</p>
+                    <p>FAQ</p>
+                </div>
+            </div>
+            <div class="content3">
+                <a href="#"><img src="images/fb.png" alt=""></a>
+                <a href="#"><img src="images/phone.png" alt=""></a>
+                <a href="#"><img src="images/email.png" alt=""></a>
+            </div>
+        </div>
+        <div class="buttom-footer">
+            <p>© 2020 SoloLearn,Inc. All rights reserved.</p>
         </div>
     </section>
 </body>
