--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <section class="header">
-        <img src="images/logo.png" alt="Haposoft" class="logo">
+        <a href="#"><img src="images/logo.png" alt="Haposoft" class="logo"></a>
         <ul class="navbar">
             <li><a href="">HOME</a></li>
             <li class="courses"><a href="">ALL COURSES</a></li>
@@ -31,24 +31,17 @@
             <p class="learn2">Interaction lessons, "on-the-go" <br>practice,peer support.</p>
             <p class="start-learning"> <a href="#">Start Learning Now!</a> </p>
         </div>
-        <!-- <div class="banner2">
-            <p class="banner21">HapoLearn</p>
-            <p class="banner22">
-                <span><img src="images/Ellipse.png" alt=""></span>
-                <span>HapoLearn xin chào bạn. <br>  Bạn có cần chúng tôi hỗ trợ gì không?</span>
-            </p>
-            <p class="banner23"><img src="images/Vector.png" alt=""><span> Đăng nhập vào Messenger</span></p>
-            <p class="banner24">Chat với HapoLearn trong Messenger</p>
-        </div> -->
-
     </section>
 
     <section class="body1">
         <img src="images/background1.png" alt="">
-        <div class="center">
+        <div class="courses1">
             <div>
 
             </div>
+        </div>
+        <div class="courses1">
+
         </div>
     </section>
 
