--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
     </section>
 
+    <!-- body -->
     <section class="body1">
         <img src="images/background1.png" alt="">
         <div class="courses1">
@@ -43,6 +44,22 @@
         <div class="courses1">
 
         </div>
+    </section>
+
+    <section class="body-hapo-learn">
+
+    </section>
+
+    <section class="body-feedback">
+
+    </section>
+
+    <section class="body-join">
+
+    </section>
+
+    <section class="body-statistic">
+
     </section>
 
     <section class="footer flex-column">
