--- a/index.html
+++ b/index.html
@@ -35,15 +35,25 @@
 
     <!-- body -->
     <section class="body1">
-        <img src="images/background1.png" alt="">
-        <div class="courses1">
-            <div>
+            <img src="images/background1.png" alt="" class="">
+            <div class="w3c">
+                <div>
+                    <img src="images/html.png" alt="">
+                </div>
+                <div>
+
+                </div>
+            </div>
+            <div class="laravel">
+
+            </div>
+            <div class="php">
 
             </div>
         </div>
-        <div class="courses1">
+        <div class="courses-other">
 
-        </div>
+
     </section>
 
     <section class="body-hapo-learn">
