--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     </section>
 
     <section class="banner">
-        <div class="banner1">
+        <div class="banner-left">
             <p class="learn">Learn Anytime, Anywhere</p>
-            <p class="learn1">at HapoLearn <span><img src="images/Ellipse.png" alt=""></span>!</p>
-            <p class="learn2">Interaction lessons, "on-the-go" <br>practice,peer support.</p>
+            <p class="learn-hapo">at HapoLearn <span><img src="images/Ellipse.png" alt=""></span>!</p>
+            <p class="learn-lessons">Interaction lessons, "on-the-go" <br>practice,peer support.</p>
             <p class="start-learning"> <a href="#">Start Learning Now!</a> </p>
         </div>
     </section>
 
     <!-- body -->
-    <section class="body1">
+    <section class="body-courses">
             <img src="images/background1.png" alt="" class="">
             <div class="w3c">
                 <div>
@@ -74,12 +74,12 @@
 
     <section class="footer flex-column">
         <div class="footer-flex">
-            <div class="content1">
+            <div class="footer-logo">
                 <img src="images/Hapo_Learn_white 1.png" alt="">
                 <p>Interactive lessons,"on-the-go"<br>practice,peer support.</p>
             </div>
-            <div class="content2">
-                <div class="content21">
+            <div class="footer-nav">
+                <div class="footer-home">
                     <p>Home</p>
                     <p>Features</p>
                     <p>Courses</p>
@@ -91,7 +91,7 @@
                     <p>FAQ</p>
                 </div>
             </div>
-            <div class="content3">
+            <div class="footer-social">
                 <a href="#"><img src="images/fb.png" alt=""></a>
                 <a href="#"><img src="images/phone.png" alt=""></a>
                 <a href="#"><img src="images/email.png" alt=""></a>
