--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body>
     <section class="header">
-        <img src="images/logo.png" alt="Haposoft" class="logo">
+        <a href="#"><img src="images/logo.png" alt="Haposoft" class="logo"></a>
         <ul class="navbar">
             <li><a href="">HOME</a></li>
-            <li id="courses"><a href="">ALL COURSES</a></li>
+            <li class="courses"><a href="">ALL COURSES</a></li>
             <li><a href="">LIST LESSON</a></li>
             <li><a href="">LESSON DETAIL</a></li>
             <li><a href="">LOGIN/REGISTER</a></li>
@@ -25,20 +25,15 @@
     </section>
 
     <section class="banner">
-        <div class="banner1">
+        <div class="banner-left">
             <p class="learn">Learn Anytime, Anywhere</p>
-            <p class="learn1">at HapoLearn <span><img src="images/Ellipse.png" alt=""></span>!</p>
-            <p class="learn2">Interaction lessons, "on-the-go" <br>practice,peer support.</p>
+            <p class="learn-hapo">at HapoLearn <span><img src="images/Ellipse.png" alt=""></span>!</p>
+            <p class="learn-lessons">Interaction lessons, "on-the-go" <br>practice,peer support.</p>
             <p class="start-learning"> <a href="#">Start Learning Now!</a> </p>
         </div>
     </section>
 
-    <section class="body1">
 
-        <div>
-            <img src="images/background1.png" alt="">
-        </div>
-    </section>
 </body>
 
 </html>
