add header and footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/icon_haposoft.png" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <title>Haposoft Trainning</title>
 
@@ -33,7 +34,56 @@
         </div>
     </section>
 
+    <!-- body -->
+    <section class="body-courses">
+ 
+    </section>
 
+    <section class="body-hapo-learn">
+
+    </section>
+
+    <section class="body-feedback">
+
+    </section>
+
+    <section class="body-join">
+
+    </section>
+
+    <section class="body-statistic">
+
+    </section>
+
+    <section class="footer flex-column font-utm">
+        <div class="footer-flex">
+            <div class="footer-logo">
+                <img src="images/Hapo_Learn_white 1.png" alt="">
+                <p>Interactive lessons,"on-the-go"<br>practice,peer support.</p>
+            </div>
+            <div class="footer-nav">
+                <div class="footer-home">
+                    <p>Home</p>
+                    <p>Features</p>
+                    <p>Courses</p>
+                    <p>Blog</p>
+                </div>
+                <div>
+                    <p>Contact</p>
+                    <p>Terms of Use</p>
+                    <p>FAQ</p>
+                </div>
+            </div>
+            <div class="footer-social">
+                <a href="#"><img src="images/fb.png" alt=""></a>
+                <a href="#"><img src="images/phone.png" alt=""></a>
+                <a href="#"><img src="images/email.png" alt=""></a>
+            </div>
+        </div>
+        <div class="buttom-footer">
+            <p>© 2020 SoloLearn,Inc. All rights reserved.</p>
+        </div>
+    </section>
 </body>
 
 </html>
