--- a/index.html
+++ b/index.html
@@ -36,11 +36,98 @@
 
     <!-- body -->
     <section class="body-courses">
- 
+        <div class="all-courses">
+            <div class="w3c">
+                <div class="courses-center">
+                    <img src="images/html.png" alt="">
+                </div>
+                <div class="courses-content">
+                    <p class="title">HTML/CSS/js Tutorial</p>
+                    <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media. I had coded quite a bit, but never touched anything in regards to web development.</p>
+                    <p class="this-courses"><a href="">Take This Course</a></p>
+                </div>
+            </div>
+            <div class="laravel">
+                <div class="courses-center">
+                    <img src="images/laravel-1-logo-black-and-white 1.png" alt="">
+                </div>
+                <div class="courses-content">
+                    <p class="title">LARAVEL Tutorial</p>
+                    <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media. I had coded quite a bit, but never touched anything in regards to web development.</p>
+                    <p class="this-courses"><a href="">Take This Course</a></p>
+                </div>
+            </div>
+            <div class="php">
+                <div class="courses-center">
+                    <img src="images/Rectangle 15.png" alt="">
+                </div>
+                <div class="courses-content">
+                    <p class="title">PHP Tutorial</p>
+                    <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media. I had coded quite a bit, but never touched anything in regards to web development.</p>
+                    <p class="this-courses"><a href="">Take This Course</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="courses-other">
+            <div class="courses-other-title">
+                <span>Other courses</span>
+                <hr/>
+            </div>
+            <div class="courses-other-main">
+                <div class="css">
+                    <div class="courses-other-center">
+                        <img src="images/CSS.png" alt="">
+                    </div>
+                    <div class="courses-other-content">
+                        <p class="other-title">CSS Tutorial</p>
+                        <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
+                        <p class="this-courses"><a href="">Take This Course</a></p>
+                    </div>
+                </div>
+                <div class="rails">
+                    <div class="courses-other-center">
+                        <img src="images/rails.png" alt="">
+                    </div>
+                    <div class="courses-other-content">
+                        <p class="other-title">Ruby on rails Tutorial</p>
+                        <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
+                        <p class="this-courses"><a href="">Take This Course</a></p>
+                    </div>
+                </div>
+                <div class="java">
+                    <div class="courses-other-center">
+                        <img src="images/java 1.png" alt="">
+                    </div>
+                    <div class="courses-other-content">
+                        <p class="other-title">Java Tutorial</p>
+                        <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
+                        <p class="this-courses"><a href="">Take This Course</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="other-title-button">
+                <p>View All Our Courses  <img src="images/direc.png" alt=""></p>
+            </div>
+        </div>
     </section>
 
     <section class="body-hapo-learn">
+        <div class="why-learn">
+            <div>
 
+            </div>
+            <div>
+                <p>Why HapoLearn?</p>
+                <p><img src="images/tic.png" alt=""> Interactive lessons, "on-the-go" practice, peer support.</p>
+                <p><img src="images/tic.png" alt=""> Interactive lessons, "on-the-go" practice, peer support.</p>
+                <p><img src="images/tic.png" alt=""> Interactive lessons, "on-the-go" practice, peer support.</p>
+                <p><img src="images/tic.png" alt=""> Interactive lessons, "on-the-go" practice, peer support.</p>
+                <p><img src="images/tic.png" alt=""> Interactive lessons, "on-the-go" practice, peer support.</p>
+            </div>
+        </div>
+        <div class="why-img">
+            <img src="images/transparent-1911160_1280.png" alt="">
+        </div>
     </section>
 
     <section class="body-feedback">
