--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <section class="header">
-        <a href="#"><img src="images/logo.png" alt="Haposoft" class="logo"></a>
+        <a href="#"><img src="images/Hapo_Learn.png" alt="Haposoft" class="logo"></a>
         <ul class="navbar">
             <li><a href="">HOME</a></li>
             <li class="courses"><a href="">ALL COURSES</a></li>
@@ -32,30 +32,212 @@
             <p class="learn-lessons">Interaction lessons, "on-the-go" <br>practice,peer support.</p>
             <p class="start-learning"> <a href="#">Start Learning Now!</a> </p>
         </div>
+        <div class="block-messenger">
+            <div class="toggle-class">
+                <div class="block-chat">
+                    <img class="img-hapo" src="image/Ellipse 7.png" alt="">
+                    <div class="block-content">
+                        <span class="web-name">HapoLearn</span>
+                        <div class="block-alert">
+                            <span class="text-alert">
+                                HapoLearn xin chào bạn.
+                                <br>
+                                Bạn có cần chúng tôi hỗ trợ gì không?
+                            </span>
+                        </div>
+                        <div class="login-mess">
+                            <img class="img-mess" src="image/Vector.png" alt="">
+                            <span class="txt-login">Đăng nhập vào Messenger</span>
+                        </div>
+                        <span class="txt-chat">Chat với HapoLearn trong Messenger</span>
+                    </div>
+                    <span class="fa fa-times close"></span>
+                </div>
+            </div>
+            <div class="messenger">
+                <img src="image/Vector (5).png" alt="">
+            </div>
+        </div>
     </section>
 
     <!-- body -->
     <section class="body-courses">
- 
+        <div class="all-courses">
+            <div class="w3c">
+                <div class="courses-center">
+                    <img src="images/html.png" alt="">
+                </div>
+                <div class="courses-content">
+                    <p class="title">HTML/CSS/js Tutorial</p>
+                    <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media. I had coded quite a bit, but never touched anything in regards to web development.</p>
+                    <p class="this-courses"><a href="">Take This Course</a></p>
+                </div>
+            </div>
+            <div class="laravel">
+                <div class="courses-center">
+                    <img src="images/laravel-1-logo-black-and-white 1.png" alt="">
+                </div>
+                <div class="courses-content">
+                    <p class="title">LARAVEL Tutorial</p>
+                    <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media. I had coded quite a bit, but never touched anything in regards to web development.</p>
+                    <p class="this-courses"><a href="">Take This Course</a></p>
+                </div>
+            </div>
+            <div class="php">
+                <div class="courses-center">
+                    <img src="images/Rectangle 15.png" alt="">
+                </div>
+                <div class="courses-content">
+                    <p class="title">PHP Tutorial</p>
+                    <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media. I had coded quite a bit, but never touched anything in regards to web development.</p>
+                    <p class="this-courses"><a href="">Take This Course</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="courses-other">
+            <div class="courses-other-title">
+                <span>Other courses</span>
+                <hr/>
+            </div>
+            <div class="courses-other-main">
+                <div class="css">
+                    <div class="courses-other-center">
+                        <img src="images/CSS.png" alt="">
+                    </div>
+                    <div class="courses-other-content">
+                        <p class="other-title">CSS Tutorial</p>
+                        <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
+                        <p class="this-courses"><a href="">Take This Course</a></p>
+                    </div>
+                </div>
+                <div class="rails">
+                    <div class="courses-other-center">
+                        <img src="images/rails.png" alt="">
+                    </div>
+                    <div class="courses-other-content">
+                        <p class="other-title">Ruby on rails Tutorial</p>
+                        <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
+                        <p class="this-courses"><a href="">Take This Course</a></p>
+                    </div>
+                </div>
+                <div class="java">
+                    <div class="courses-other-center">
+                        <img src="images/java 1.png" alt="">
+                    </div>
+                    <div class="courses-other-content">
+                        <p class="other-title">Java Tutorial</p>
+                        <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
+                        <p class="this-courses"><a href="">Take This Course</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="other-title-button">
+                <p>View All Our Courses  <img src="images/direc.png" alt=""></p>
+            </div>
+        </div>
     </section>
 
     <section class="body-hapo-learn">
-
+        <div class="why-learn">
+            <div class="why-learn-img">
+                <img src="images/mb 1.png" alt="">
+            </div>
+            <div class="why-learn-content">
+                <p class="why-hapolearn">Why HapoLearn?</p>
+                <p><img src="images/tic.png" alt=""> Interactive lessons, "on-the-go" practice, peer support.</p>
+                <p><img src="images/tic.png" alt=""> Interactive lessons, "on-the-go" practice, peer support.</p>
+                <p><img src="images/tic.png" alt=""> Interactive lessons, "on-the-go" practice, peer support.</p>
+                <p><img src="images/tic.png" alt=""> Interactive lessons, "on-the-go" practice, peer support.</p>
+                <p><img src="images/tic.png" alt=""> Interactive lessons, "on-the-go" practice, peer support.</p>
+            </div>
+        </div>
+        <div class="why-img">
+            <img src="images/transparent-1911160_1280.png" alt="">
+        </div>
     </section>
 
     <section class="body-feedback">
-
+        <div class="body-feedback-title">
+            <p class="body-feedback-title-title">Feedback</p>
+            <hr/>
+            <p class="body-feedback-title-content">What other students turned professionals have to say about us after learning with us and reaching their goals</p>
+        </div>
+        <div class="body-feedback-content">
+            <div class="feedback-content-left">
+                <div class="feedback-content-top">
+                    <p class="feedback-content-center">“A wonderful course on how to start. Eddie beautifully conveys all essentials of a becoming a good Angular developer. Very glad to have taken this course. Thank you Eddie Bryan.”</p>
+                </div>
+                <div class="feedback-content-button">
+                    <div>
+                        <p class="feedback-content-avt"><img src="images/Ellipse 1.png" alt=""></p>
+                    </div>
+                    <div class="feedback-content-space">
+                        <span class="feedback-content-profile">
+                            <p class="font-username">Hoang Anh Nguyen</p> 
+                            <p class="font-programing-language"> PHP</p> 
+                            <img src="images/star100.png" alt="">
+                            <img src="images/star100.png" alt="">
+                            <img src="images/star100.png" alt="">
+                            <img src="images/star100.png" alt="">
+                            <img src="images/star0.png" alt="">
+                        </span>
+                    </div>                    
+                </div>
+            </div>
+            <div class="feedback-content-right">
+                <div class="feedback-content-top">
+                    <p class="feedback-content-center">“A wonderful course on how to start. Eddie beautifully conveys all essentials of a becoming a good Angular developer. Very glad to have taken this course. Thank you Eddie Bryan.”</p>
+                </div>
+                <div class="feedback-content-button">
+                    <div>
+                        <p class="feedback-content-avt"><img src="images/Ellipse 1.png" alt=""></p>
+                    </div>
+                    <div class="feedback-content-space">
+                        <span class="feedback-content-profile">
+                            <p class="font-username">Tuan Tran Hoang</p>
+                            <p class="font-programing-language">Python</p> 
+                            <img src="images/star100.png" alt="">
+                            <img src="images/star100.png" alt="">
+                            <img src="images/star100.png" alt="">
+                            <img src="images/star100.png" alt="">
+                            <img src="images/star0.png" alt="">
+                        </span>
+                    </div>                    
+                </div>
+                
+            </div>
+        </div>
     </section>
 
-    <section class="body-join">
-
+    <section class="body-start-learning">
+        <div>
+            <p class="body-start-learning-content">Become a member of our growing community!</p>
+            <p class="body-start-learning-button"><a href="">Start Learning Now!</a></p>
+        </div>
     </section>
 
     <section class="body-statistic">
-
+        <div class="body-statistic-title">
+            <p>Statistic</p>
+            <hr/>
+        </div>
+        <div class="body-statistic-content">
+            <div>
+                <p class="body-statistic-content-courses">Courses</p>
+                <p class="body-statistic-content-number">1,586</p>
+            </div>
+            <div class="body-statistic-content-center">
+                <p class="body-statistic-content-courses">Lessons</p>
+                <p class="body-statistic-content-number">2,689</p>
+            </div>
+            <div>
+                <p class="body-statistic-content-courses">Learners</p>
+                <p class="body-statistic-content-number">16,882</p>
+            </div>
+        </div>
     </section>
 
-    <section class="footer flex-column font-utm">
+    <section class="footer flex-column">
         <div class="footer-flex">
             <div class="footer-logo">
                 <img src="images/Hapo_Learn_white 1.png" alt="">
