--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/icon_haposoft.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="fonts/font-awesome/css/all.min.css">
     <title>Haposoft Trainning</title>
 
 </head>
@@ -35,7 +35,7 @@
         <div class="block-messenger">
             <div class="toggle-class">
                 <div class="block-chat">
-                    <img class="img-hapo" src="image/Ellipse 7.png" alt="">
+                    <img class="img-hapo" src="images/Ellipse 7.png" alt="">
                     <div class="block-content">
                         <span class="web-name">HapoLearn</span>
                         <div class="block-alert">
@@ -46,7 +46,7 @@
                             </span>
                         </div>
                         <div class="login-mess">
-                            <img class="img-mess" src="image/Vector.png" alt="">
+                            <img class="img-mess" src="images/Vector.png" alt="">
                             <span class="txt-login">Đăng nhập vào Messenger</span>
                         </div>
                         <span class="txt-chat">Chat với HapoLearn trong Messenger</span>
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="messenger">
-                <img src="image/Vector (5).png" alt="">
+                <img src="images/Group 8.png" alt="">
             </div>
         </div>
     </section>
@@ -105,7 +105,7 @@
                         <img src="images/CSS.png" alt="">
                     </div>
                     <div class="courses-other-content">
-                        <p class="other-title">CSS Tutorial</p>
+                        <p class="title">CSS Tutorial</p>
                         <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
                         <p class="this-courses"><a href="">Take This Course</a></p>
                     </div>
@@ -115,7 +115,7 @@
                         <img src="images/rails.png" alt="">
                     </div>
                     <div class="courses-other-content">
-                        <p class="other-title">Ruby on rails Tutorial</p>
+                        <p class="title">Ruby on rails Tutorial</p>
                         <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
                         <p class="this-courses"><a href="">Take This Course</a></p>
                     </div>
@@ -125,7 +125,7 @@
                         <img src="images/java 1.png" alt="">
                     </div>
                     <div class="courses-other-content">
-                        <p class="other-title">Java Tutorial</p>
+                        <p class="title">Java Tutorial</p>
                         <p class="courses-content-content">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
                         <p class="this-courses"><a href="">Take This Course</a></p>
                     </div>
@@ -266,6 +266,8 @@
             <p>© 2020 SoloLearn,Inc. All rights reserved.</p>
         </div>
     </section>
+    <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
